--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "autoload": {
         "psr-4": {
-            "App\\": "src"
+            "App\\": "src/"
         }
+    },
+    "require": {
+        "ardagnsrn/ollama-php": "^1.0",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
